# python-books

./: README.md  pyproject.toml
architecture_patterns_with_python/1_domain_modeling/: model.py
architecture_patterns_with_python/2_repository_pattern/: orm.py  repository.py
architecture_patterns_with_python/4_service_layer/: flask_app.py  services.py  test_services.py
architecture_patterns_with_python/building_architecture_to_support_domain_modeling/: _1_domain_modeling.py  _2_repository_pattern.py  _3_coupling_and_abstractions.py
extras/inspect/: inspect.py
extras/metaprogramming/: 1_prelim_requirements.py  2_metaprogramming_basics.py  3_metaclasses.py  4_signature_binding.py  5_descriptor_protocol.py
extras/modules_and_packages/: README.md  main.py  module1.py
extras/pydantic/: _pydantic.py
extras/xpath/: README.md  intro.py
fluent_python/classes_and_protocols/: 11_a_pythonic_object.py  12_special_methods_for_sequences.py  13_interfaces_protocols_abcs.py  14_inheritance.py  15_more_about_type_hints.py  16_operator_overloading.py
fluent_python/control_flow/: 17_iterators_generators_and_coroutines.py  18_with_match_and_else_blocks.py  19_concurrency_models.py  20_concurrent_executors.py  21_asynchronous_programming.py
fluent_python/data_structures/: 1_the_python_data_model.py  2_array_of_sequences.py  3_dictionaries_and_sets.py  4_unicode_text_versus_bytes.py  5_data_class_builders.py  6_object_reference_mutability_and_recycling.py
fluent_python/functions_as_objects/: 10_design_patterns_with_first_class_functions.py  8_type_hints_in_functions.py  (+2 more)
(+39 files in other folders)
